--- a/style.less
+++ b/style.less
@@ -78,7 +78,7 @@
             width: 100%;
             padding: 8px 8px;
             border-radius: 30px;
-            border: 1px solid #eee;
+            border: 1px solid #eee !important;
             box-sizing: border-box;
         }
 
